--- a/main_service/gui/package.json
+++ b/main_service/gui/package.json
@@ -15,9 +15,16 @@
   "dependencies": {
     "black-dashboard": "^1.0.0",
     "bootstrap": "^4.1.3",
+    "history": "^4.7.2",
+    "lodash": "^4.17.11",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "^2.0.5"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.0.5",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "browserslist": [
     ">0.2%",
