--- a/main_service/Dockerfile
+++ b/main_service/Dockerfile
@@ -1,9 +1,15 @@
-FROM nikolaik/python-nodejs:latest
+FROM node:latest AS s_gui
+ADD . /app
+COPY ./gui/package.json /app/gui
+WORKDIR /app/gui
+RUN npm install
+RUN npm run build
+
+FROM python:latest
 ADD . /app
 WORKDIR /app
+RUN pip install pipenv
 RUN pipenv install --system --deploy
-WORKDIR /app/gui
-RUN npm run build
-WORKDIR /app
 EXPOSE 5000
+COPY --from=s_gui /app/gui/build /app/gui/build
 CMD ["python3", "wsgi.py"]
