--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,4 +3,19 @@ services:
   web:
     build: ./main_service
     ports:
-     - "127.0.0.1:5000:5000"
+     - "80:5000"
+    links:
+        - mongodb
+    depends_on:
+        - mongodb
+  mongodb:
+    image: mongo:latest
+    container_name: "mongodb"
+    environment:
+      - MONGO_DATA_DIR=/data/db
+      - MONGO_LOG_DIR=/dev/null
+    volumes:
+      - ./data/db:/data/db
+    ports:
+      - 27017:27017
+    command: mongod --smallfiles --logpath=/dev/null # --quiet
