--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     depends_on:
         - mongodb
   mongodb:
-    image: mongo:latest
+    image: mongo:2.7
     container_name: "mongodb"
     environment:
       - MONGO_DATA_DIR=/data/db
